<resources>
    <string name="app_name">Mad-Grid</string>
    <string name="homepage_start">Start Game</string>
    <string name="homepage_description">Description</string>
    <string name="homepage_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_music">Music</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_sound">Sound</string>
    <string name="game_home">Home</string>
    <string name="game_reset">Reset</string>
</resources>